--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title> Aprendiendo a crear una p\'agina web </title>
 </head>
 <body>
-<h1> Hello Coursera!  </h1>
+<h1> Esta p\'agina es una lista de instrucciones para crear una p\'agina web b\'asica  </h1>
 </body>
 </html>
