--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Aprendiendo a crear una p\'agina web </title>
+	<title> Aprendiendo a crear una p&agina web </title>
 </head>
+
 <body>
-<h1> Esta p\'agina es una lista de instrucciones para crear una p\'agina web b\'asica  </h1>
+
+<h1> Introducci&on </h1>
+<p> Esta p&agina es una lista de instrucciones para crear una p&agina web b&asica. Creada simplemente para aprender en familia :), por curiosidad y con el fin de crecer en el sector de la inform&atica. Comentarios, correcciones, preguntas (y respuestas) son bienvenidas. Esta p&agina la construimos entre todos ;). </p>
+
+<h1> Programas a descargar y cuenta Github </h1>
+<p> Lo primero que vamos a hace es instalar los programas necesarios para trabajar y abrir la cuenta en GitHub. 
+	<ol>
+		<li> Cuenta En GitHub: Entrar en <a> https://github.com/ </a> </li>
+	</ol>
+</p>
+
+
 </body>
+
 </html>
