--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1> Introducci&on </h1>
-<p> Esta p &a;gina es una lista de instrucciones para crear una p &a;gina web b &a;sica. Creada simplemente para aprender en familia :), por curiosidad y con el fin de crecer en el sector de la inform&atica. Comentarios, correcciones, preguntas (y respuestas) son bienvenidas. Esta p &a;gina la construimos entre todos ;). </p>
+<p> Esta p &aacute;gina es una lista de instrucciones para crear una p &a;gina web b &a;sica. Creada simplemente para aprender en familia :), por curiosidad y con el fin de crecer en el sector de la inform&atica. Comentarios, correcciones, preguntas (y respuestas) son bienvenidas. Esta p &a;gina la construimos entre todos ;). </p>
 
 <h1> Programas a descargar y cuenta Github </h1>
 <p> Lo primero que vamos a hace es instalar los programas necesarios para trabajar y abrir la cuenta en GitHub. 
