--- a/site/index.html
+++ b/site/index.html
@@ -7,12 +7,22 @@
 <body>
 
 <h1> Introducci&on </h1>
-<p> Esta p &aacute;gina es una lista de instrucciones para crear una p &a;gina web b &a;sica. Creada simplemente para aprender en familia :), por curiosidad y con el fin de crecer en el sector de la inform&atica. Comentarios, correcciones, preguntas (y respuestas) son bienvenidas. Esta p &a;gina la construimos entre todos ;). </p>
+<p> Esta p&aacute;gina es una lista de instrucciones para crear una p&aacute;gina web b &aacute;sica. Creada simplemente para aprender en familia :), por curiosidad y con el fin de crecer en el sector de la inform&atica. Comentarios, correcciones, preguntas (y respuestas) son bienvenidas. Esta p&aacute;gina la construimos entre todos ;). </p>
 
 <h1> Programas a descargar y cuenta Github </h1>
 <p> Lo primero que vamos a hace es instalar los programas necesarios para trabajar y abrir la cuenta en GitHub. 
 	<ol>
-		<li> Cuenta En GitHub: Entrar <a href=https://github.com/> aqu&i; </a> </li>
+		<li> Cuenta En GitHub: 
+			<div> Entrar <a href=https://github.com/> aqu&iacute; </a>, ir a "sign up" o "registrarse" y abrir una cuenta </div>
+			<div> Una vez la cuenta creada, crear un repositorio </div>
+			<div> Entrar en el repositorio e ir a "settings" o "parametros", luego "pages" o "paginas" </div>
+		</li>
+
+		<li> Cuenta En GitHub: 
+			<div> Entrar <a href=https://github.com/> aqu&iacute; </a>, ir a "sign up" o "registrarse" y abrir una cuenta </div>
+			<div> Una vez la cuenta creada, crear un repositorio </div>
+		</li>
+
 	</ol>
 </p>
 
